--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
@@ -15,7 +15,7 @@
 <div class="center-content">
     @Html.Partial("CabinetMenu", ViewData)
     <div class="cabinet-main">
-        <h3 class="mrg-top-bottom20">Добро пожаловать, @ViewBag.User.Name, в Ваш персональный кабинет компании Broccoli Trade!</h3>
+        <h3 class="mrg-top-bottom20 wellcome">Добро пожаловать, <strong>@ViewBag.User.Name</strong>, в Ваш персональный кабинет компании Broccoli Trade!</h3>
         <div id="pricing-table">
             <div class="plan plan1">
                 <div class="price-header">Money +</div>
