--- a/broccoli/BroccoliMvc/Views/Shared/MainMenu.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/MainMenu.cshtml
@@ -1,9 +1,8 @@
 ﻿<div class="main-menu">
     <div class="menu">
-        <div><a href="#">УТП</a></div>
+        <div><a href="#">Предложение Брокколи</a></div>
         <div><a href="@Url.Action("BrokerInfo", "Home")">Брокер ForexInn</a></div>
         <div><a href="#">Торгуй круглосуточно</a></div>
-        <div><a href="#">Вопрос-ответ</a></div>
         <div class="last"><a href="#">Свяжитесь с нами</a></div>
     </div>
 </div>
