--- a/broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
@@ -17,36 +17,35 @@
         </span>
         <span>Партнерский код: <font>broccoli</font></span>
     </div>
-    <h4>Брокер ForexInn имеет ряд преимуществ - вот самые вкусные и полезные.</h4>
-    <ul class="about-broker">
-        <li>1. Пополнение и снятие наличными в офисах.</li>
-        <li>2. Нет внутренних курсов, конвертация по курсу ЦБ.</li>
-        <li>3. Комиссия на пополнение/снятие - 0%</li>
-        <li>4. Вывод средств со счета за 15 минут.</li>
-        <li>5. Узкий плавающий спред.</li>
-        <li>6. Рыночное исполнение ордеров.</li>
-        <li>7. Они рады скальперам и торговым советникам.</li>
-        <li>8. Профессиональная круглосуточная техническая поддержка в торговый период.</li>
-    </ul>
-    <div class="broker">
-        <img src="@Url.Content("~/Content/img/broker-logo.png")"/>
-        <span class="button">
-            <a href="http://www.forexinn.ru/register/a/broccoli" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
-        </span>
-        <span>Партнерский код: <font>broccoli</font></span>
+    <div class="about-broker-container">
+        <h4>Брокер ForexInn имеет ряд преимуществ - вот самые вкусные и полезные.</h4>
+        <ul class="about-broker">
+            <li>1. Пополнение и снятие наличными в офисах.</li>
+            <li>2. Нет внутренних курсов, конвертация по курсу ЦБ.</li>
+            <li>3. Комиссия на пополнение/снятие - 0%</li>
+            <li>4. Вывод средств со счета за 15 минут.</li>
+            <li>5. Узкий плавающий спред.</li>
+            <li>6. Рыночное исполнение ордеров.</li>
+            <li>7. Они рады скальперам и торговым советникам.</li>
+            <li>8. Профессиональная круглосуточная техническая поддержка в торговый период.</li>
+        </ul>
+        <img src="@Url.Content("~/Content/img/depositphotos_1950636-Various-vegetables-isolated.jpg")"/>
     </div>
-    <h4>Торговые условия</h4>
-    <ul class="trading-terms">
-        <li>Типы счетов: Cent, Classic, PAMM</li>
-        <li>Кредитное плечо от 1:10 до 1:500</li>
-        <li>Минимальный размер лота 0.01</li>
-        <li>Узкий плавающий спред</li>
-        <li>Исполнение ордеров Market Execution</li>
-        <li>Разрешена торговля советниками</li>
-        <li>Ликвидность 7 банков от BBO</li>
-        <li>Торговля Forex, Metals, CFD, Oil</li>
-        <li>Торговая платформа: MetaTrader 4</li>
-    </ul>
+    <div class="hr-shadow trading-terms-container">
+        <h4>Торговые условия</h4>
+        <ul class="trading-terms">
+            <li>Типы счетов: Cent, Classic, PAMM</li>
+            <li>Кредитное плечо от 1:10 до 1:500</li>
+            <li>Минимальный размер лота 0.01</li>
+            <li>Узкий плавающий спред</li>
+            <li>Исполнение ордеров Market Execution</li>
+            <li>Разрешена торговля советниками</li>
+            <li>Ликвидность 7 банков от BBO</li>
+            <li>Торговля Forex, Metals, CFD, Oil</li>
+            <li>Торговая платформа: MetaTrader 4</li>
+        </ul>
+        <img src="@Url.Content("~/Content/img/depositphotos_1374386-A-vegetarian-construction-isolated.jpg")"/>
+    </div>
     <div class="broker">
         <img src="@Url.Content("~/Content/img/broker-logo.png")"/>
         <span class="button">
