--- a/broccoli/BroccoliMvc/Views/Home/BroccoliOffer.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/BroccoliOffer.cshtml
@@ -12,17 +12,17 @@
 <div class="center-content broccoli-offer">
     <div class="offer-discribe">
         <img style="height: 200px;" src="@Url.Content("~/Content/img/depositphotos_1066825-Pineapple.jpg")"/>
-        <div class="offer-title">Зарабатывайте</div>
+        <div class="offer-title segoe-ui-light">Зарабатывайте</div>
         <div class="offer-text">Возможность зарабатывать от 5% до 100% от депозита в месяц.</div>
     </div>
     <div class="offer-discribe">
         <img style="height: 200px;" src="@Url.Content("~/Content/img/depositphotos_15565199-Lime-stack (1).jpg")"/>
-        <div class="offer-title">Управление</div>
+        <div class="offer-title segoe-ui-light">Управление</div>
         <div class="offer-text">Пошаговые инструкции для настройки советников  и торговой платформы помогут Вам без труда ориентироваться в управлении Вашими финансами.</div>
     </div>
     <div class="offer-discribe">
         <img style="height: 200px;margin-left: 60px;" src="@Url.Content("~/Content/img/depositphotos_1158059-Young-sunflower-sprout.jpg")"/>
-        <div class="offer-title">Риск</div>
+        <div class="offer-title segoe-ui-light">Риск</div>
         <div class="offer-text">Торгуйте при помощи наших советников с возможностью выставления риска.</div>
     </div>
     <div class="hr-shadow calculator-container">
@@ -231,6 +231,9 @@
                 </tr>
             </tbody>
         </table>
+        <span class="button">
+            <a href="@Url.Action("RegisterForm", "Account")" target="_blank"><input id="regLink" class="large" type="button" value="Регистрация" /></a>
+        </span>
     </div>
 </div>
 <script type="text/javascript" src="@Url.Content("~/Scripts/Main/broccoli.offer.js")"></script>
