--- a/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
@@ -33,6 +33,7 @@
             @RenderBody()    
         </div>
         <div class="footer">
+            @Html.Partial("Footer")
         </div>
         <div class="opacity"></div>
         <div id="top-link-full">
@@ -40,6 +41,6 @@
                 <a href="#top">Наверх</a>
             </div>
         </div>
-        <script type="text/javascript"> _shcp = []; _shcp.push({ widget_id: 565983, widget: "Chat", side: "right", position: "top", template: "green", title: "Онлайн консультант", title_offline: "Оффлайн" }); (function () { var hcc = document.createElement("script"); hcc.type = "text/javascript"; hcc.async = true; hcc.src = ("https:" == document.location.protocol ? "https" : "http") + "://widget.siteheart.com/apps/js/sh.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hcc, s.nextSibling); })(); </script>
+        <script type="text/javascript"> _shcp = []; _shcp.push({ widget_id: 565983, widget: "Chat" }); (function () { var hcc = document.createElement("script"); hcc.type = "text/javascript"; hcc.async = true; hcc.src = ("https:" == document.location.protocol ? "https" : "http") + "://widget.siteheart.com/apps/js/sh.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hcc, s.nextSibling); })();</script>
     </body>
 </html>
