--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 }
 
 <div class="banner">
-    <div id="mainBanner" class="slider">
+    <div id="mainBanner" class="slider" style="display: none;">
         <div class="panelContainer">
             <div class="first panel">
                 <img class="broccoli" src="@Url.Content("~/Content/img/broccoli.png")"/>
@@ -46,15 +46,15 @@
                     <div class="panel">
                         <h3>Схема работы. Видео инструкция:</h3>
                         <div class="gal">
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/nl-QWPhJjM4?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
                         </div>
                         <span class="button">
                             <a href="@Url.Action("RegisterForm", "Account")" target="_blank"><input id="regLink" class="large" type="button" value="Регистрация" /></a>
