--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="second panel">
-                <img class="broccoli" src="@Url.Content("~/Content/img/broccoli.png")"/>
+                <img class="broccoli" src="@Url.Content("~/Content/img/calc1.png")"/>
                 <div class="text">
                     <h2>Здоровые инвестиции от 5 до 100% в месяц!</h2>
                     <p>От недельных до многолетних инвестиций. Для дерзких и консервативных инвесторов!</p>
