--- a/broccoli/BroccoliMvc/Views/Home/Comments.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Comments.cshtml
@@ -22,10 +22,11 @@
     }
     @if (HttpContext.Current.User.Identity.IsAuthenticated)
     {
+        <div class="message" style="display: none;"></div>
         <div class="add-comment-title">Добавить отзыв:</div>
         <textarea class="ckeditor" name="ckeditor"></textarea>    
         <span id="sendComment" class="button send-comment">
-            <a href="#"><input class="large" type="button" value="Отправить" /></a>
+            <a href="javascript:void(0);"><input class="large" type="button" value="Отправить" /></a>
         </span>
     }
 </div>
@@ -33,21 +34,26 @@
 <script type="text/javascript"> document.SendCommentUrl = '@Url.Action("AddComment", "Home")'</script>
 <script type="text/javascript"> document.CommentsUrl = '@Url.Action("Comments", "Home")'</script>
 <script type="text/javascript">
-    jQuery(document).ready(function ($) {
+    jQuery(document).ready(function () {
+        $('#commentsPage').hide();
         CKEDITOR.replace('ckeditor', {});
 
-        $('#sendComment').click(function() {
-            $.ajax({
-                url: document.SendCommentUrl,
-                data: {
-                    comment: CKEDITOR.instances.ckeditor.getData()
-                },
-                success: function(data) {
-                    if (data.result == true) {
-                        window.location = document.CommentsUrl;
+        $('#sendComment').click(function () {
+            if (CKEDITOR.instances.ckeditor.getData() != "") {
+                $.ajax({
+                    url: document.SendCommentUrl,
+                    data: {
+                        comment: CKEDITOR.instances.ckeditor.getData()
+                    },
+                    success: function(data) {
+                        if (data.result) {
+                            $('.message').html('Ваш отзыв отправлен на модерацию. В ближайшее время он будет опубликован.');
+                            $('.message').show();
+                            CKEDITOR.instances.ckeditor.setData('');
+                        }
                     }
-                }
-            });
+                });
+            }
         });
     });
 </script>
