--- a/broccoli/BroccoliMvc/Content/Site.css
+++ b/broccoli/BroccoliMvc/Content/Site.css
@@ -61,8 +61,8 @@ table {
 }
 label[disabled="true"]{opacity:0.4;}
 input[type="text"], input[type="password"], textarea, select {
-    border: inset 0;
-    border: 1px solid darkGray;
+    border: 4px solid #e4e4e4;
+    padding: 3px 5px !important;
     border-radius: 3px; 
     -moz-border-radius: 3px; /* Firefox */ 
     -webkit-border-radius: 3px; /* Safari, Chrome */ 
@@ -73,11 +73,11 @@ input[type="text"], input[type="password"], textarea, select {
 input[type="text"], input[type="password"] {
     height: 22px;
 }
-input[type="text"]:hover, input[type="password"]:hover, textarea:hover {
-    border: 1px solid #74ca35;
-}
-input[type="text"]:focus, input[type="password"]:hover, textarea:focus {
-    border: 1px solid #74ca35;
+input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
+    border-color: #d3d3d3;
+    -moz-transition: border-color 200ms ease;
+    -webkit-transition: border-color 200ms ease;
+    transition: border-color 200ms ease;
 }
 /*end reset css*/
 
@@ -704,7 +704,7 @@ hr {
 
 .bad
 {
-    background-color: #FBF8E9;
+    background-color: rgb(247, 247, 247);
 }
 
 .register-form .agreeement {
@@ -724,15 +724,6 @@ hr {
     resize: none;
     text-align: left;
 }
-
-.register-form .agreeement textarea:hover {
-    border: 1px solid #74ca35;
-}
-
-.register-form .agreeement textarea:active {
-    border: 1px solid #74ca35;
-}
-
 
 .register-form .register-button {
     width: 390px;
@@ -772,7 +763,7 @@ hr {
     position: relative;
     top: 18px;
     padding-top: 30px;
-    padding-bottom: 40px;
+    padding-bottom: 65px;
 }
 
 .login-window .login-window-body label {
@@ -1314,8 +1305,8 @@ hr {
 
 .container {
     overflow: hidden;
-    min-height: 500px;
-    -webkit-min-height: 500px;
+    min-height: 670px;
+    -webkit-min-height: 670px;
     position: relative;
     width: 630px;
     margin: 0 auto;
@@ -1325,7 +1316,7 @@ hr {
     width: 630px;
     margin: 0;
     position: absolute;
-    top: -550px;
+    top: -700px;
     -webkit-transition: all 500ms cubic-bezier(0.680, 0, 0.265, 1); /* older webkit */
     -webkit-transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
     -moz-transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
@@ -1340,7 +1331,7 @@ hr {
 }
 
 .alt-way-container .subject {
-    width: 628px;
+    width: 610px;
     margin-bottom: 10px;
     margin-top: 20px;
 }
@@ -1693,7 +1684,7 @@ footer#main{
 
 .period-radio .period-date input {
     height: 18px;
-    width: 100px;
+    width: 83px;
     margin-right: 10px;
 }
 
