--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/AlternativeWay.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/AlternativeWay.cshtml
@@ -32,10 +32,12 @@
         </table>
         <a href="javascript:void(0)" id="addUser">Добавить еще...</a>
         @Html.TextBox("subject", null, new { @class = "subject", @placeholder = "Заголовок" })
-        <textarea id="inviteMessage" class="inviteMessage" name="inviteMessage">Ююхуу, <%name%>! приглашаю тебя на сайт <a href="www.broccoli-trade.ru">www.broccoli-trade.ru</a>!</textarea>
+        <div class="placeholder-description"><strong>%ИМЯ%</strong> - сюда будет подставлено имя вашего друга, которое вы указали с email-ом</div>
+        <textarea id="inviteMessage" class="inviteMessage" name="inviteMessage">Приветствую %ИМЯ%, это <Ваше имя>, узнал про систему торговую Брокколи Трейд, позволяющую с выставлением риска инвестировать на рынок форекс. Если тебе в принципе интересны инструменты инвестиций, позволяющие зарабатывать от 5 до 100 % за месяц, пройди по ссылке <a href="www.broccoli-trade.ru">www.broccoli-trade.ru</a>!</textarea>
         <div id="lessSymbols"></div>
         <button id="sendInvites" type="button" class="green-button">Сделать рассылку</button>
         <div class="social-networks">
+            <div style="margin-bottom: 10px;">Рассказать в соц. сетях</div>
             <div class="buttons">
                 <table>
                     <tr>
