--- a/broccoli/BroccoliMvc/Views/Shared/Footer.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/Footer.cshtml
@@ -5,7 +5,7 @@
         <li><a href="@Url.Action("Comments", "Home")">Отзывы</a></li>
         <li><a href="@Url.Action("BroccoliOffer", "Home")">Предложение Брокколи</a></li>
         <li><a href="@Url.Action("BrokerInfo", "Home")">Брокер ForexInn</a></li>
-        <li><a href="">Торгуй круглосуточно</a></li>
+        <li><a href="@Url.Action("VPS", "Home")">Торгуй круглосуточно</a></li>
         <li><a href="">Свяжитесь с Нами</a></li>
     </ul>
     <p class="footer-text">
