--- a/broccoli/BroccoliMvc/Views/Shared/MainMenu.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/MainMenu.cshtml
@@ -2,7 +2,7 @@
     <div class="menu">
         <div><a href="@Url.Action("BroccoliOffer", "Home")">Предложение Брокколи</a></div>
         <div><a href="@Url.Action("BrokerInfo", "Home")">Брокер ForexInn</a></div>
-        <div><a href="#">Торгуй круглосуточно</a></div>
+        <div><a href="@Url.Action("VPS", "Home")">Торгуй круглосуточно</a></div>
         <div class="last"><a href="#">Свяжитесь с нами</a></div>
     </div>
 </div>
