--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
@@ -19,42 +19,52 @@
         <div id="pricing-table">
             <div class="plan plan1">
                 <div class="price-header">Money +</div>
-                <div class="price">0</div>  
-                <div class="monthly">Бесплатный</div>      
+                <div class="price">200 - 300%</div>  
+                <div class="monthly">за 5 лет</div>      
                 <ul>
-                    <li><b>Некоторая</b> информация</li>
-                    <li><b>100GB</b> месячный трафик</li>
-                    <li><b>20</b> почтовых ящиков</li>
-			        <li><b>Сколько хочешь</b> поддоменов</li>			
+                    <li>Выставление риска <strong>Нет</strong></li>
+                    <li>Минимальный депозит<br/><strong>Нет требований</strong></li>
+                    <li>Рекомендуемый депозит<br/><strong>Нет рекомендаций</strong></li>
+                    <li><strong>ТФ-H1</strong></li>
+                    <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD</strong></li>
                 </ul>
                 <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 1 })">Получить</a>         
             </div >
             <div class="plan plan2">
                 <div class="price-header">Garanted</div>
-                <div class="price">$100</div>
-                <div class="monthly">в месяц</div>  
+                <div class="price">200-300%</div>
+                <div class="monthly">За 5 лет</div>  
                 <ul>
-                    <li><b>5GB</b> пространства на диске</li>
-                    <li><b>50GB</b> месячный трафик</li>
-                    <li><b>10</b> почтовых ящиков</li>
-			        <li><b>Сколько хочешь</b> поддоменов</li>			
+                    <li>Выставление риска <strong>Есть</strong></li>
+                    <li>Минимальный депозит<br/><strong>100$</strong></li>
+                    <li>Рекомендуемый депозит<br/><strong>10.000$</strong></li>
+                    <li><strong>ТФ-М15</strong></li>
+			        <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD</strong></li>
                 </ul>
                 <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 2 })">Получить</a>            
             </div>
             <div class="plan plan3 popular-plan">
                 <div class="price-header">Max trade</div>
-                <div class="price">$1000</div>
-                <div class="monthly">в месяц</div>
+                <div class="price">6000-9000%</div>
+                <div class="monthly">За 5 лет</div>
                 <ul>
-                    <li><b>3GB</b> пространства на диске</li>
-                    <li><b>25GB</b> месячный трафик</li>
-                    <li><b>5</b> почтовых ящиков</li>
-			        <li><b>Сколько хочешь</b> поддоменов</li>			
+                    <li>Выставление риска <strong>Есть</strong></li>
+                    <li>Минимальный депозит<br/><strong>1000$</strong></li>
+                    <li>Рекомендуемый депозит<br/><strong>10.000$</strong></li>
+                    <li><strong>ТФ-М15</strong></li>
+			        <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD, AUDUSD, USDCAD, USDCHF</strong></li>
                 </ul>
                 <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 3 })">Получить</a>        
             </div>	
         </div>
         <br/>
+        <div class="instructions">
+            <ul>
+                <li>1. Инструкция к установке и настройке <strong>Money+</strong>. <a href="@Url.Action("GetInstruction", "PersonalCabinet", new { tradingSystem = "Money+" })" target="_blank">Открыть</a></li>
+                <li>2. Инструкция к установке и настройке <strong>Garanted</strong>. <a href="@Url.Action("GetInstruction", "PersonalCabinet", new { tradingSystem = "Garanted" })" target="_blank">Открыть</a></li>
+                <li>3. Инструкция к установке и настройке <strong>Max Trade</strong>. <a href="@Url.Action("GetInstruction", "PersonalCabinet", new { tradingSystem = "MaxTrade" })" target="_blank">Открыть</a></li>
+            </ul>
+        </div>
         <br/>
         <hr/>
         @Html.Partial("AlternativeWay")
