--- a/broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
@@ -18,11 +18,11 @@
         <span>Партнерский код: <font>broccoli</font></span>
     </div>
     <div class="about-broker-container">
-        <h4>Брокер ForexInn имеет ряд преимуществ - вот самые вкусные и полезные.</h4>
+        <h4>Брокер ForexInn имеет ряд преимуществ — вот самые вкусные и полезные:</h4>
         <ul class="about-broker">
             <li>1. Пополнение и снятие наличными в офисах.</li>
             <li>2. Нет внутренних курсов, конвертация по курсу ЦБ.</li>
-            <li>3. Комиссия на пополнение/снятие - 0%</li>
+            <li>3. Комиссия на пополнение/снятие — 0%</li>
             <li>4. Вывод средств со счета за 15 минут.</li>
             <li>5. Узкий плавающий спред.</li>
             <li>6. Рыночное исполнение ордеров.</li>
@@ -32,7 +32,7 @@
         <img src="@Url.Content("~/Content/img/depositphotos_1950636-Various-vegetables-isolated.jpg")"/>
     </div>
     <div class="hr-shadow trading-terms-container">
-        <h4>Торговые условия</h4>
+        <h4>Торговые условия:</h4>
         <ul class="trading-terms">
             <li>Типы счетов: Cent, Classic, PAMM</li>
             <li>Кредитное плечо от 1:10 до 1:500</li>
