--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -65,8 +65,7 @@
                             <tr>
                                 <td class="description">
                                     <h3>Откройте свой счет!</h3>
-                                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                    <p>Не уверены в своих силах? — Откройте демо счёт и отточите навыки работы с советниками. <br />Хотите зарабатывать уже сейчас? — Откройте реальный торговый счёт. Впереди много прибыльных сделок!</p>
                                 </td>
                                 <td class="broker">
                                     <div>
@@ -74,6 +73,7 @@
                                         <span class="button">
                                             <a href="http://www.forexinn.ru/register/a/broccoli" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
                                         </span>
+                                        <span class="partner-code">Партнерский код: <font>broccoli</font></span>
                                     </div>
                                 </td>
                             </tr>
@@ -96,7 +96,7 @@
                             </div >
                             <div class="plan plan2">
                                 <div class="price-header">Garanted</div>
-                                <div class="price">200-300%</div>
+                                <div class="price">200 - 300%</div>
                                 <div class="monthly">За 5 лет</div>  
                                 <ul>
                                     <li>Выставление риска <strong>Есть</strong></li>
@@ -109,7 +109,7 @@
                             </div>
                             <div class="plan plan3 popular-plan">
                                 <div class="price-header">Max trade</div>
-                                <div class="price">6000-9000%</div>
+                                <div class="price">6000 - 9000%</div>
                                 <div class="monthly">За 5 лет</div>
                                 <ul>
                                     <li>Выставление риска <strong>Есть</strong></li>
