--- a/broccoli/BroccoliMvc/Views/Shared/MainMenu.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/MainMenu.cshtml
@@ -3,6 +3,6 @@
         <div><a href="@Url.Action("BroccoliOffer", "Home")">Предложение Брокколи</a></div>
         <div><a href="@Url.Action("BrokerInfo", "Home")">Брокер ForexInn</a></div>
         <div><a href="@Url.Action("VPS", "Home")">Торгуй круглосуточно</a></div>
-        <div class="last"><a href="#">Свяжитесь с нами</a></div>
+        <div class="last"><a href="@Url.Action("ContactUs", "Home")">Свяжитесь с нами</a></div>
     </div>
 </div>
