--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -46,15 +46,16 @@
                     <div class="panel">
                         <h3>Схема работы. Видео инструкция:</h3>
                         <div class="gal">
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/nl-QWPhJjM4?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/nl-QWPhJjM4?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/иконка 1.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/иконка 2.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/иконка 3.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/иконка 4.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/иконка 5.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/иконка 6.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/иконка 7.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/иконка 8.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/иконка 9.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/иконка 10.jpg")"></a>
                         </div>
                         <span class="button">
                             <a href="@Url.Action("RegisterForm", "Account")" target="_blank"><input id="regLink" class="large" type="button" value="Регистрация" /></a>
