--- a/broccoli/BroccoliMvc/Views/Home/ContactUs.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/ContactUs.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "Свяжитесь с нами";
     Layout = "~/Views/Shared/_LayoutMin.cshtml";
 }
+@model BroccoliTrade.Web.BroccoliMvc.Models.Communications.ContactModel
 
 <div class="banner small">
     <div class="action">
@@ -10,5 +11,48 @@
 </div>
 
 <div class="center-content broker-info">
-    
+    <div class="contact-container">
+        <div class="contact-form">
+            <div class="row">
+                <span class="labels">
+                    @Html.Label("ФИО")
+                </span>
+                <span>
+                    @Html.TextBoxFor(m => m.Name, new { @id = "name" })
+                </span>
+            </div>
+            <div class="row">
+                <span class="labels">
+                    @Html.Label("Email")
+                </span>
+                <span>
+                    @Html.TextBoxFor(m => m.Email, new { @id = "email" })
+                </span>
+            </div>
+            <div class="row">
+                <span class="labels">
+                    @Html.Label("Заголовок")
+                </span>
+                <span>
+                    @Html.TextBoxFor(m => m.Subject, new { @id = "subject" })
+                </span>
+            </div>
+            <div class="row">
+                <span class="labels for-mes">
+                    @Html.Label("Сообщение")
+                </span>
+                <span>
+                    @Html.TextAreaFor(m => m.Message, 5, 1, new { @class = "mes" })
+                </span>
+            </div>
+            <div class="row">
+                <span class="button">
+                    <a href="http://www.forexinn.ru/register/a/broccoli" target="_blank"><input class="large" type="button" value="Отправить" /></a>
+                </span>
+            </div>
+        </div>
+        <div class="contact-description">
+            
+        </div>
+    </div>
 </div>
